[package]
name = "mu-rover"
version = "0.1.0"
edition = "2021"
authors = ["James M. Putnam <putnamjm.design@gmail.com"]
publish = false

[[bin]]
name = "mu-rover"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.37" }
envmnt = { version = "0.10.4" }
hostname = { version = "0.3.1" }
futures = { version = "0.3.30" }
futures-locks = { version = "0.7.1" }
iced = { version = "0.12.1", features = ["image", "system", "highlighter", "tokio", "debug"] }
iced_aw = { version = "0.8.0", features = ["tabs", "icons"] }
iced_native = { version = "0.10.3" }
iced_wgpu = { version = "0.12.1" }
lazy_static = { version = "1.4.0" }
mu = { git = "https://github.com/Software-Knife-and-Tool/mu.git", branch = "main" }
num-traits = { version = "0.2.15", optional = true }
once_cell = { version = "1.17.1" }
rfd = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uname = { version = "0.1.0" }
tokio = { version = "1.37.0", features = ["fs"] }
whoami = { version = "1.4.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4.37", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.iced_graphics]
version = "0.12.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.4"

[workspace.dependencies.tokio]
version = "1.37.0"

[dependencies.iced_style]
version = "0.8.0"

[workspace.dependencies.iced]
version = "0.12.1"

[workspace.dependencies.iced_aw]
path = "./"
default-features = false

[package.metadata.deb]
assets = [
    ["target/release-opt/mu-rover", "usr/bin/mu-rover", "755"],
    ["mu-rover.desktop", "usr/share/applications/", "644"],
]
